--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body class="h-full flex flex-col">
-    <div id="app" class="flex flex-col flex-grow"></div>
+    <div id="app" class="flex flex-col flex-grow-1"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
