新增阻挡页面返回

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body class="h-full flex flex-col">
+  <body class="h-full flex flex-col dark">
     <div id="app" class="flex flex-col flex-grow-1"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
