修复tailwind样式覆盖问题，由#APP更改为 #root

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
     </style>
   </head>
-  <body class="app-container">
+  <body id="root" class="app-container">
     <div id="app" class="app-container"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
