--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <style>
-      html{
+      html,body{
         height:100%;
+        background-color: black;
       }
       .app-container{
         display:flex;
@@ -16,7 +17,7 @@
       }
     </style>
   </head>
-  <body id="root" class="app-container">
+  <body id="root">
     <div id="app" class="app-container"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
